Refactor model component and services for consistency and error handling improvements
- Updated ModelEditComponent to standardize component naming and logging.
- Enhanced ModelListComponent with improved cloning logic and error handling.
- Refactored AttributeService to use asynchronous methods and improved error handling.
- Updated DeviceService to remove synchronous requests and streamline API calls.
- Removed CustomErrorHandler service as it was redundant.
- Refactored FloorService to use new Floors interface and improved error handling.
- Updated LogService to standardize log retrieval methods and improve error handling.
- Deleted unused Bug, DeviceList, ModelsList, Rack, and utility files to clean up the codebase.
- Introduced new Floors interface for better type management.
- Corrected typos in README and improved documentation clarity.

--- a/src/app/components/attribute/attribute-list/attribute-list.component.html
+++ b/src/app/components/attribute/attribute-list/attribute-list.component.html
@@ -74,5 +74,6 @@
 <div class="fs-7 fw-lighter deviceid">component: {{ component }}</div>
 
 <app-log *ngIf="attributeComponent === '' || attributeComponent === undefined"
-  [attributeComponentObject]="this.device" [component]="component">
+  [attributeComponentObject]="this.device" [component]="component" [componentName]="componentName"
+  [isComponent]="true">
 </app-log>
