--- a/src/app/components/devices/devices-list/devices-list.component.html
+++ b/src/app/components/devices/devices-list/devices-list.component.html
@@ -46,4 +46,4 @@
   </ngb-pagination>
 </div>
 
-<app-log [component]="component"></app-log>
+<app-log [component]="component" [componentName]="componentName" [isComponent]="true"></app-log>
