--- a/src/app/components/floors/edit-floor/edit-floor.component.html
+++ b/src/app/components/floors/edit-floor/edit-floor.component.html
@@ -306,5 +306,5 @@
       </div>
     </div>
   </form>
-  <app-log [component]="component"></app-log>
+  <app-log [component]="component" [componentName]="componentName" [isComponent]="false"></app-log>
 </div>
