--- a/src/app/components/models/model-list/model-list.component.html
+++ b/src/app/components/models/model-list/model-list.component.html
@@ -61,4 +61,4 @@
     </ngb-pagination>
   </div>
 </div>
-<app-log [component]="component"></app-log>
+<app-log [component]="component" [componentName]="componentName" [isComponent]="true"></app-log>
