--- a/src/app/components/attribute/edit-attribute/edit-attribute.component.html
+++ b/src/app/components/attribute/edit-attribute/edit-attribute.component.html
@@ -7,10 +7,10 @@
         <div class="form-group mb-3">
           <label for="deviceId" class="form-label">Device Id</label>
           <select (change)="changeDeviceId($event)" formControlName="deviceId" [ngClass]="{
-              'is-invalid': editAttributeForm.get('deviceId')?.hasError('atLeastOneValidator'),
-              'is-valid': !editAttributeForm.get('modelId')?.hasError('atLeastOneValidator'),
-              'form-select': true,
-            }" id="deviceId">
+                        'is-invalid': editAttributeForm.get('deviceId')?.invalid && (editAttributeForm.get('deviceId')?.touched || editAttributeForm.get('deviceId')?.dirty),
+              'is-valid': editAttributeForm.get('deviceId')?.valid && !editAttributeForm.get('deviceId')?.hasError('atLeastOneValidator') && (editAttributeForm.get('deviceId')?.touched || editAttributeForm.get('deviceId')?.dirty),
+                        'form-select': true,
+                      }" id="deviceId">
             <option *ngFor="let deviceObj of deviceDictionary; let i = index" [value]="deviceObj._id">
               {{ deviceObj.name }}
             </option>
@@ -19,7 +19,7 @@
             One of field: deviceId, modelId or connectionId is required
           </div>
           <div class="log-message">
-            {{ toString(editAttributeForm.controls.deviceId.value) }}
+            {{ editAttributeForm.controls.deviceId.value | json }}
           </div>
         </div>
       </div>
@@ -27,10 +27,10 @@
         <div class="form-group mb-2">
           <label for="modelId" class="form-label">Model Id</label>
           <select (change)="changeModelId($event)" formControlName="modelId" [ngClass]="{
-              'is-invalid': editAttributeForm.get('modelId')?.hasError('atLeastOneValidator'),
-              'is-valid': !editAttributeForm.hasError('atLeastOneValidator'),
-              'form-select': true,
-            }" id="modelId">
+                        'is-invalid': editAttributeForm.get('modelId')?.invalid && (editAttributeForm.get('modelId')?.touched || editAttributeForm.get('modelId')?.dirty),
+                        'is-valid': editAttributeForm.get('modelId')?.valid && (editAttributeForm.get('modelId')?.touched || editAttributeForm.get('modelId')?.dirty),
+                        'form-select': true,
+                      }" id="modelId">
             <option *ngFor="let modelObj of modelDictionary; let i = index" [value]="modelObj._id">
               {{ modelObj.name }}
             </option>
@@ -39,7 +39,7 @@
             One of field: deviceId, modelId or connectionId is required
           </div>
           <div class="log-message">
-            {{ toString(editAttributeForm.controls.modelId.value) }}
+            {{ editAttributeForm.controls.modelId.value | json }}
           </div>
         </div>
       </div>
@@ -47,10 +47,10 @@
         <div class="form-group mb-2">
           <label for="connectionId" class="form-label">Connection Id</label>
           <select (change)="changeConnectionId($event)" formControlName="connectionId" [ngClass]="{
-              'is-invalid': editAttributeForm.hasError('atLeastOneValidator'),
-              'is-valid': !editAttributeForm.hasError('atLeastOneValidator'),
-              'form-select': true,
-            }" id="connectionId">
+                        'is-invalid': editAttributeForm.get('connectionId')?.invalid && (editAttributeForm.get('connectionId')?.touched || editAttributeForm.get('connectionId')?.dirty),
+              'is-valid': editAttributeForm.get('connectionId')?.valid && !editAttributeForm.get('connectionId')?.hasError('atLeastOneValidator') && (editAttributeForm.get('connectionId')?.touched || editAttributeForm.get('connectionId')?.dirty),
+                        'form-select': true,
+                      }" id="connectionId">
             <option *ngFor="let connectionObj of connectionDictionary; let i = index"
               value="{{ connectionObj._id }}">
               {{ connectionObj.name }}
@@ -67,23 +67,25 @@
       <div class="col">
         <div class="form-group mb-2">
           <label for="attributeDictionaryId" class="form-label">Attribute Dictionary Id</label>
-          <select (change)="changeAttributeDictionaryId($event)" formControlName="attributeDictionaryId" [ngClass]="{
-              'is-invalid': editAttributeForm.get('attributeDictionaryId')?.hasError('required'),
-              'is-valid': !editAttributeForm.get('attributeDictionaryId')?.hasError('required'),
+          <select formControlName="attributeDictionaryId" [ngClass]="{
+              'is-invalid': editAttributeForm.get('attributeDictionaryId')?.invalid && (editAttributeForm.get('attributeDictionaryId')?.touched || editAttributeForm.get('attributeDictionaryId')?.dirty),
+              'is-valid': editAttributeForm.get('attributeDictionaryId')?.valid && (editAttributeForm.get('attributeDictionaryId')?.touched || editAttributeForm.get('attributeDictionaryId')?.dirty),
               'form-select': true,
             }" id="attributeDictionaryId">
             <option *ngFor="let attributeDictionaryObj of attributeDictionary; let i = index"
-              [value]="attributeDictionaryObj._id.toString()">
+              [value]="attributeDictionaryObj._id">
               {{ attributeDictionaryObj.name }}
             </option>
           </select>
-          <div *ngIf="this.editAttributeForm.controls.attributeDictionaryId?.errors" class="invalid-feedback">
-            <div *ngIf="this.editAttributeForm.controls.attributeDictionaryId?.errors?.required">
+          <div
+            *ngIf="editAttributeForm.get('attributeDictionaryId')?.invalid && (editAttributeForm.get('attributeDictionaryId')?.touched || editAttributeForm.get('attributeDictionaryId')?.dirty)"
+            class="invalid-feedback">
+            <div *ngIf="editAttributeForm.get('attributeDictionaryId')?.errors?.required">
               attributeDictionaryId is required
             </div>
           </div>
           <div class="log-message">
-            {{ editAttributeForm.controls.attributeDictionaryId.value?.toString() }}
+            {{ editAttributeForm.controls.attributeDictionaryId.value }}
           </div>
         </div>
       </div>
@@ -93,14 +95,14 @@
         <div class="form-group mb-2">
           <label for="value" class="form-label">Value</label>
           <input type="text" formControlName="value" id="value" required [ngClass]="{
-              'is-invalid': this.editAttributeForm.get('value')?.status !== 'VALID',
-              'is-valid': this.editAttributeForm.controls.value.status === 'VALID',
+              'is-invalid': editAttributeForm.get('value')?.status !== 'VALID',
+              'is-valid': editAttributeForm.controls.value.status === 'VALID',
               'form-control': true,
             }" />
-          <div *ngIf="this.editAttributeForm.controls.value.errors" class="invalid-feedback">
-            <div *ngIf="this.editAttributeForm.controls.value.errors.required">Value is required</div>
-            <div *ngIf="this.editAttributeForm.controls.value.errors.minlength">
-              Value must be at least {{ this.editAttributeForm.controls.value.errors.minlength.requiredLength }}
+          <div *ngIf="editAttributeForm.controls.value.errors" class="invalid-feedback">
+            <div *ngIf="editAttributeForm.controls.value.errors.required">Value is required</div>
+            <div *ngIf="editAttributeForm.controls.value.errors.minlength">
+              Value must be at least {{ editAttributeForm.controls.value.errors.minlength.requiredLength }}
               characters
             </div>
           </div>
